--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <section>
     <div>
       <form class="searchbar">
-        <h3
-        <a href="Food_truck_finder.html"><p>Where are the trucks</p>
+        <h3>
+        <a href="Food_truck_finder.html"><p>Where are the trucks</p></a>
       </h3>
       <input type="text" placeholder="Where are the trucks" required>
       <button type="submit">Now</button></form>
-        <h3
+        <h3>
         <p>Subscribe now!</p>
       </h3>
       <input type="text" placeholder="Enter Your email HERE" required>
